Replaced Iterator with LogIterator