@@ -1,11 +1,11 @@
 package io.joshworks.fstore.es.utils;
 
-import io.joshworks.fstore.core.util.Iterators;
+import io.joshworks.fstore.log.Iterators;
+import io.joshworks.fstore.log.LogIterator;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -19,10 +19,10 @@ public class IteratorsTest {
 
     @Test
     public void concat() {
-        Iterator<Integer> first = Arrays.asList(1).iterator();
-        Iterator<Integer> second = Arrays.asList(2).iterator();
+        LogIterator<Integer> first = Iterators.of(List.of(1));
+        LogIterator<Integer> second = Iterators.of(List.of(2));
 
-        Iterator<Integer> concat = Iterators.concat(Arrays.asList(first, second));
+        LogIterator<Integer> concat = Iterators.concat(List.of(first, second));
 
         assertTrue(concat.hasNext());
         assertEquals(Integer.valueOf(1), concat.next());
@@ -36,10 +36,10 @@ public class IteratorsTest {
 
     @Test
     public void concat_empty() {
-        Iterator<Integer> first = Collections.<Integer>emptyList().iterator();
-        Iterator<Integer> second = Collections.<Integer>emptyList().iterator();
+        LogIterator<Integer> first = Iterators.empty();
+        LogIterator<Integer> second = Iterators.empty();
 
-        Iterator<Integer> concat = Iterators.concat(Arrays.asList(first, second));
+        Iterator<Integer> concat = Iterators.concat(List.of(first, second));
 
         assertFalse(concat.hasNext());
         assertFalse(concat.hasNext());
@@ -56,10 +56,10 @@ public class IteratorsTest {
 
     @Test
     public void concat_one_of_lists_empty() {
-        Iterator<Integer> first = Arrays.asList(1).iterator();
-        Iterator<Integer> second = Collections.<Integer>emptyList().iterator();
+        LogIterator<Integer> first = Iterators.of(List.of(1));
+        LogIterator<Integer> second = Iterators.empty();
 
-        Iterator<Integer> concat = Iterators.concat(Arrays.asList(first, second));
+        Iterator<Integer> concat = Iterators.concat(List.of(first, second));
 
         assertTrue(concat.hasNext());
         assertEquals(Integer.valueOf(1), concat.next());
@@ -72,11 +72,11 @@ public class IteratorsTest {
 
     @Test
     public void concat_one_of_second_item_empty() {
-        Iterator<Integer> first = Arrays.asList(1).iterator();
-        Iterator<Integer> second = Collections.<Integer>emptyList().iterator();
-        Iterator<Integer> third = Arrays.asList(2).iterator();
+        LogIterator<Integer> first = Iterators.of(List.of(1));
+        LogIterator<Integer> second = Iterators.empty();
+        LogIterator<Integer> third = Iterators.of(List.of(2));
 
-        Iterator<Integer> concat = Iterators.concat(Arrays.asList(first, second, third));
+        Iterator<Integer> concat = Iterators.concat(List.of(first, second, third));
 
         assertTrue(concat.hasNext());
         assertEquals(Integer.valueOf(1), concat.next());
